# promptly

./: README.md  main.py  pyproject.toml
examples/: basic_usage.py
examples/prompts/: hello.j2
promptly/: manager.py
tests/: test_manager.py
